--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,3 +108,15 @@
   },
   "include": ["src"]
 }
+
+
+//{
+//  "compilerOptions": {
+//    "module": "commonjs",
+//    "target": "es5",
+//    "sourceMap": true
+//  },
+//  "exclude": [
+//    "node_modules"
+//  ]
+//}
